# python-video-generator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
python_video_generator/: __init__.py  final_screen.mov  orchestrator.py  utils.py
python_video_generator/image_parser/: bing_image_retrieval.py
python_video_generator/text_2_speech/: speech_generator.py
python_video_generator/text_parser/: wikipedia.py
python_video_generator/video_editor/: bing.py  crawler.py  generate_video.py  star_wars_opening.py  utils.py
test/unit/: test_my_module.py
